@@ -4,11 +4,9 @@
 ** ex: syntax=sql
 */
 
-
 /*
 ** Metadata
 */
-
 CREATE TABLE metadata
 (
 	var_name varchar(63) not null,
@@ -16,11 +14,9 @@ CREATE TABLE metadata
 	PRIMARY KEY(var_name)
 ) TABLE_TYPE;
 
-
 /*
 ** System configuration table
 */
-
 CREATE TABLE config
 (
 	var_name varchar(63) not null,
@@ -35,11 +31,9 @@ CREATE TABLE config
 	PRIMARY KEY(var_name)
 ) TABLE_TYPE;
 
-
 /*
 ** System configuration data (for large data)
 */
-
 CREATE TABLE config_clob
 (
 	var_name varchar(63) not null,
@@ -47,11 +41,9 @@ CREATE TABLE config_clob
 	PRIMARY KEY(var_name)
 ) TABLE_TYPE;
 
-
 /*
 ** Users
 */
-
 CREATE TABLE users
 (
 	id integer not null,
