@@ -57,10 +57,12 @@ void ReindexIData();
 BOOL ClearDatabase();
 void ExportDatabase(const char *file);
 void ImportDatabase(const char *file);
+void MigrateDatabase(const TCHAR *sourceConfig);
 void UpgradeDatabase();
 void UnlockDatabase();
 DB_RESULT SQLSelect(const TCHAR *pszQuery);
 DB_ASYNC_RESULT SQLAsyncSelect(const TCHAR *pszQuery);
+BOOL SQLExecute(DB_STATEMENT hStmt);
 BOOL SQLQuery(const TCHAR *pszQuery);
 BOOL SQLBatch(const TCHAR *pszBatch);
 BOOL SQLDropColumn(const TCHAR *table, const TCHAR *column);
